--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
   "repository": "https://github.com/heroku/node-js-sample",
-  "keywords": ["node", "express", "static"]
+  "keywords": ["node", "express", "static"],
+  "addons": [
+    "nodetime:pro-5"
+  ]
 }
