--- a/app.json
+++ b/app.json
@@ -4,14 +4,11 @@
   "addons": [
     "openredis",
     {
-      "plan": "mongolab:shared-single-small",
+      "plan": "mongolab:sandbox",
       "as": "MONGO"
     },
     {
-      "plan": "heroku-postgresql",
-      "options": {
-        "version": "9.5"
-      }
+      "plan": "heroku-postgresql:hobby-dev"
     }
   ]  
 }
